  * checks/etcfiles:
    + [RA] /etc/init.d/{skeleton,rc,rcS} are not conffiles, and README
      files in /etc need not be.
  * checks/files{.desc,}:
    + [RA] /etc/init.d/{skeleton,README} don't need to be executable.
    + [RA] Warn about linda overrides since linda has been removed from
      the archive.  Thanks, Y Giridhar Appaji Nag.  (Closes: #469603)
  * checks/scripts:
    + [RA] Attempt to quash some Perl warnings.
    + [RA] *.py files in /usr/{lib,share}, /etc/init.d/skeleton, and *.ex
      files do not need to be executable even if they look like scripts.
    + [RA] Add clisp, procmail, and rrdcgi, and another way interpretors
      are templated in *.in files.
  * checks/shared-libs:
    + [RA] Move the default ld.so search path into data.  Drop obsolete
      /usr/lib/libg++-dbg, /usr/X11R6/lib/Xaw3d, and libc5 compatibility
      directories in the process.
    + [RA] Allow and expect ldconfig, SONAMEs, and shlibs treatment of
      libraries in multiarch directories.

  * data/binaries/multiarch:
    + [RA] New file listing multiarch binary directories.
  * data/shared-libs/ldconfig-dirs:
    + [RA] New file listing directories searched by ld.so.

  * unpack/list-srcpkg:
    + [RA] Fix syntax error introduced by Uploaders support.

 -- Russ Allbery <rra@debian.org>  Tue, 04 Mar 2008 13:07:18 -0800

lintian (1.23.46) unstable; urgency=low

  The "five Lintian committers!" release.

  * checks/binaries:
    + [RA] Anchor file matches for Perl libraries and debugging symbols so
      as to not match partial paths.  Based on a patch from Niko Tyni.
      (Closes: #466501)
    + [RA] Also check for make -i when checking if errors from make clean or
      distclean are ignored.  Thanks, Jörg Sommer.  (Closes: #469024)
  * checks/changelog-file:
    + [RA] Adjust for the extra space added by Parse::DebianChangelog when
      checking line length.  Thanks, Robert Millan.  (Closes: #467019)
  * checks/common_data.pm: