@@ -19,6 +19,8 @@ lintian (1.23.47) UNRELEASED; urgency=low
     + [RA] /etc/init.d/{skeleton,README} don't need to be executable.
     + [RA] Warn about linda overrides since linda has been removed from
       the archive.  Thanks, Y Giridhar Appaji Nag.  (Closes: #469603)
+    + [RA] Check for numeric owners or groups outside of the reserved
+      static ranges.  Patch from Håkon Stordahl.  (Closes: #469924)
   * checks/scripts:
     + [RA] Attempt to quash some Perl warnings.
     + [RA] *.py files in /usr/{lib,share}, /etc/init.d/skeleton, and *.ex
@@ -39,6 +41,9 @@ lintian (1.23.47) UNRELEASED; urgency=low
 
   * unpack/list-srcpkg:
     + [RA] Fix syntax error introduced by Uploaders support.
+  * unpack/unpack-binpkg-l1:
+    + [RA] Extract a tar listing with numeric owners and groups into
+      index-owner-id in the lab.
 
  -- Russ Allbery <rra@debian.org>  Tue, 04 Mar 2008 13:07:18 -0800
 
